--- a/test.html
+++ b/test.html
@@ -112,7 +112,7 @@
                 >
             </div>
             <!-- COMPACT FILTERS ROW -->
-            <div style="display:flex;gap:8px;margin:12px 0;flex-wrap:wrap;align-items:center">
+            <div class="filter-row" style="display:flex;gap:8px;margin:12px 0;flex-wrap:wrap;align-items:center">
                 <select id="bandFilter" class="app-select" onchange="filterByBand(this.value)" style="width:auto;min-width:140px;padding:7px 10px;font-size:0.85em;font-weight:600">
                     <option value="all">🎸 All Bands</option>
                     <option value="GD">Grateful Dead</option>
@@ -158,7 +158,7 @@
     
     <!-- SONG METADATA -->
     <div class="song-metadata" style="background:rgba(255,255,255,0.04);padding:15px;border-radius:8px;margin-bottom:20px;border:1px solid var(--border,rgba(255,255,255,0.08))">
-        <div style="display:flex;gap:14px;flex-wrap:wrap;align-items:center">
+        <div class="meta-row" style="display:flex;gap:14px;flex-wrap:wrap;align-items:center">
             <div class="meta-item">
                 <span style="font-weight:600;color:var(--text-muted,#94a3b8);margin-right:6px">🎤 Lead:</span>
                 <select id="leadSingerSelect" onchange="updateLeadSinger(this.value)" class="app-select" style="width:auto;min-width:100px;padding:5px 8px;font-size:0.85em">
