--- a/index.html
+++ b/index.html
@@ -78,8 +78,14 @@
                         onmouseleave="document.getElementById('signInTooltip').style.display='none'">
                         👤 Sign In
                     </button>
-                    <div id="signInTooltip" style="display:none;position:absolute;top:100%;left:50%;transform:translateX(-50%);margin-top:8px;background:var(--bg-card,#1e293b);border:1px solid rgba(255,255,255,0.15);border-radius:10px;padding:14px;width:300px;z-index:100;text-align:left;font-size:0.82em;line-height:1.5;color:var(--text-muted,#94a3b8);box-shadow:0 8px 30px rgba(0,0,0,0.4);">
-                        <div style="font-weight:700;color:white;margin-bottom:6px;">Why sign in?</div>
+                    <button onclick="const t=document.getElementById('signInTooltip');t.style.display=t.style.display==='block'?'none':'block';event.stopPropagation();"
+                        style="background:rgba(255,255,255,0.1);border:1px solid rgba(255,255,255,0.2);color:var(--text-muted);padding:8px 10px;border-radius:8px;font-size:0.82em;cursor:pointer;margin-left:6px;"
+                        title="Why sign in?">❓</button>
+                    <div id="signInTooltip" style="display:none;position:absolute;top:100%;left:0;margin-top:8px;background:var(--bg-card,#1e293b);border:1px solid rgba(255,255,255,0.15);border-radius:10px;padding:14px;width:300px;max-width:90vw;z-index:100;text-align:left;font-size:0.82em;line-height:1.5;color:var(--text-muted,#94a3b8);box-shadow:0 8px 30px rgba(0,0,0,0.4);">
+                        <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:6px">
+                            <span style="font-weight:700;color:white">Why sign in?</span>
+                            <button onclick="document.getElementById('signInTooltip').style.display='none';event.stopPropagation();" style="background:none;border:none;color:var(--text-muted);cursor:pointer;font-size:1.1em;padding:0 0 0 8px">✕</button>
+                        </div>
                         <div style="color:var(--green,#10b981);margin-bottom:4px;">✅ <b>Signed in:</b></div>
                         <div style="margin-left:18px;margin-bottom:8px;">Your name appears on recordings, uploads & votes · Band data syncs across all members · Access shared setlists, finances & calendar</div>
                         <div style="color:var(--yellow,#f59e0b);margin-bottom:4px;">⚠️ <b>Not signed in:</b></div>
@@ -204,13 +210,13 @@
                     <span style="font-weight:600;color:var(--text-muted,#94a3b8)">🎶 Harmonies</span>
                 </label>
             </div>
-            <div class="meta-item" id="harmonyMembersRow" style="display:none">
-                <span style="font-weight:600;color:var(--text-muted,#94a3b8);margin-right:6px">Singers:</span>
-                <label style="display:inline-flex;align-items:center;gap:3px;margin-right:8px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9)"><input type="checkbox" class="harmony-member-cb" value="drew" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Drew</label>
-                <label style="display:inline-flex;align-items:center;gap:3px;margin-right:8px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9)"><input type="checkbox" class="harmony-member-cb" value="chris" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Chris</label>
-                <label style="display:inline-flex;align-items:center;gap:3px;margin-right:8px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9)"><input type="checkbox" class="harmony-member-cb" value="brian" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Brian</label>
-                <label style="display:inline-flex;align-items:center;gap:3px;margin-right:8px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9)"><input type="checkbox" class="harmony-member-cb" value="pierce" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Pierce</label>
-                <label style="display:inline-flex;align-items:center;gap:3px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9)"><input type="checkbox" class="harmony-member-cb" value="jay" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Jay</label>
+            <div class="meta-item" id="harmonyMembersRow" style="display:none;flex-wrap:wrap;gap:4px;align-items:center">
+                <span style="font-weight:600;color:var(--text-muted,#94a3b8);margin-right:4px;font-size:0.85em">Singers:</span>
+                <label style="display:inline-flex;align-items:center;gap:3px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9);background:rgba(255,255,255,0.04);border:1px solid var(--border);border-radius:6px;padding:3px 8px"><input type="checkbox" class="harmony-member-cb" value="drew" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Drew</label>
+                <label style="display:inline-flex;align-items:center;gap:3px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9);background:rgba(255,255,255,0.04);border:1px solid var(--border);border-radius:6px;padding:3px 8px"><input type="checkbox" class="harmony-member-cb" value="chris" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Chris</label>
+                <label style="display:inline-flex;align-items:center;gap:3px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9);background:rgba(255,255,255,0.04);border:1px solid var(--border);border-radius:6px;padding:3px 8px"><input type="checkbox" class="harmony-member-cb" value="brian" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Brian</label>
+                <label style="display:inline-flex;align-items:center;gap:3px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9);background:rgba(255,255,255,0.04);border:1px solid var(--border);border-radius:6px;padding:3px 8px"><input type="checkbox" class="harmony-member-cb" value="pierce" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Pierce</label>
+                <label style="display:inline-flex;align-items:center;gap:3px;cursor:pointer;font-size:0.85em;color:var(--text,#f1f5f9);background:rgba(255,255,255,0.04);border:1px solid var(--border);border-radius:6px;padding:3px 8px"><input type="checkbox" class="harmony-member-cb" value="jay" onchange="updateHarmonyMembers()" style="accent-color:var(--accent)"> Jay</label>
             </div>
         </div>
     </div>
@@ -526,6 +532,7 @@
         <div id="page-metronome" class="app-page hidden"></div>
         <div id="page-equipment" class="app-page hidden"></div>
         <div id="page-contacts" class="app-page hidden"></div>
+        <div id="page-social" class="app-page hidden"></div>
         <div id="page-admin" class="app-page hidden"></div>
         <div id="page-help" class="app-page hidden"></div>
     </div>
