--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div class="menu-section">
             <button class="menu-item" data-page="equipment" onclick="showPage('equipment')"><span class="menu-icon">🎛️</span> Equipment</button>
             <button class="menu-item" data-page="contacts" onclick="showPage('contacts')"><span class="menu-icon">👥</span> Contacts</button>
+            <button class="menu-item" data-page="notifications" onclick="showPage('notifications')"><span class="menu-icon">🔔</span> Notifications</button>
             <button class="menu-item" data-page="admin" onclick="showPage('admin')"><span class="menu-icon">⚙️</span> Settings & Admin</button>
             <div class="menu-divider"></div>
             <button class="menu-item" data-page="help" onclick="showPage('help')"><span class="menu-icon">❓</span> Help & Guide</button>
@@ -537,6 +538,7 @@
         <div id="page-contacts" class="app-page hidden"></div>
         <div id="page-social" class="app-page hidden"></div>
         <div id="page-admin" class="app-page hidden"></div>
+        <div id="page-notifications" class="app-page hidden"></div>
         <div id="page-help" class="app-page hidden"></div>
     </div>
 
