--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <div class="menu-section-title">Music</div>
             <button class="menu-item active" data-page="songs" onclick="showPage('songs')"><span class="menu-icon">🎵</span> Song Library</button>
             <button class="menu-item" data-page="setlists" onclick="showPage('setlists')"><span class="menu-icon">📋</span> Setlists</button>
+            <button class="menu-item" data-page="playlists" onclick="showPage('playlists')"><span class="menu-icon">🎵</span> Playlists</button>
             <button class="menu-item" data-page="practice" onclick="showPage('practice')"><span class="menu-icon">📅</span> Practice Plan</button>
         </div>
         <div class="menu-divider"></div>
@@ -546,6 +547,7 @@
 
         <!-- Dynamic pages rendered by JS -->
         <div id="page-setlists" class="app-page hidden"></div>
+        <div id="page-playlists" class="app-page hidden"></div>
         <div id="page-practice" class="app-page hidden"></div>
         <div id="page-calendar" class="app-page hidden"></div>
         <div id="page-gigs" class="app-page hidden"></div>
