--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="step-number" style="flex-shrink:0">1</div>
                 <h2 style="margin:0;line-height:1.2">Song Library</h2>
                 <span style="color:var(--text-dim,#64748b);font-size:0.8em;margin-left:auto" id="songCount"></span>
-                <button onclick="showCustomSongsList()" class="btn btn-ghost btn-sm" title="Add a custom song not in the library" style="margin-left:6px;font-size:0.75em;padding:4px 8px">
+                <button onclick="showCustomSongsList()" class="btn btn-ghost btn-sm" title="Add a custom song not in the library" style="margin-left:6px;font-size:0.75em;padding:4px 8px" id="customSongBtn">
                     ➕ <span id="customSongCount" style="background:var(--accent);color:white;border-radius:10px;padding:1px 5px;font-size:0.85em;display:none"></span>
                 </button>
             </div>
