--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app-shell.css">
-    <link rel="stylesheet" href="rehearsal-mode.css">
 </head>
 <body>
     <!-- TOP BAR -->
@@ -275,15 +274,32 @@
     </div>
 </div>
 
-<!-- Step 4: Stage Cheat Sheets -->
+<!-- Step 4: Cover Me -->
 <div class="step-card hidden" id="step4ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
         <div class="step-number" style="flex-shrink:0">4</div>
+        <h2 style="margin:0">Cover Me</h2>
+    </div>
+    <p class="subtitle">Other bands playing this song — the original artist live is in North Star &amp; Reference Versions above</p>
+
+    <div class="resource-section" id="coverMeSection">
+        <div class="section-header" style="display:flex;align-items:flex-start;justify-content:space-between;gap:12px;flex-wrap:wrap">
+            <div>
+                <h3>🎤 Cover Versions</h3>
+                <p style="color:var(--text-muted,#94a3b8);font-size:0.85em;margin:0">Other bands playing this song — Archive.org, YouTube, Spotify</p>
+            </div>
+            <button class="btn btn-ghost btn-sm" onclick="searchCoverMe()" style="white-space:nowrap;flex-shrink:0">🔍 Find Covers</button>
+        </div>
+        <div id="coverMeContainer" style="margin-top:12px"></div>
+        <button class="secondary-btn" id="addCoverMeBtn" style="margin-top:12px" onclick="addCoverMe()">+ Add Cover Version</button>
+    </div>
+</div>
+
+<!-- Step 5: Stage Cheat Sheets -->
+<div class="step-card hidden" id="step5ref">
+    <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
+        <div class="step-number" style="flex-shrink:0">5</div>
         <h2 style="margin:0">Stage Crib Notes</h2>
-        <button class="rm-launch-btn" style="margin-left:auto;font-size:0.8em;padding:7px 14px"
-            onclick="openRehearsalMode((selectedSong?.title || selectedSong) || '')">
-            🎸 Rehearsal Mode
-        </button>
     </div>
     <p class="subtitle">Each member's go-to reference — tabs, chord charts, or lyrics for stage/iPad
         <button onclick="searchUltimateGuitar()" style="background:none;border:none;color:var(--accent-light,#818cf8);text-decoration:underline;cursor:pointer;font-size:0.85em;padding:0;margin-left:8px">🔍 Ultimate Guitar</button>
@@ -294,10 +310,10 @@
     </div>
 </div>
 
-<!-- Step 5: Practice Workshop -->
-<div class="step-card hidden" id="step5ref">
+<!-- Step 6: Practice Workshop -->
+<div class="step-card hidden" id="step6ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">5</div>
+        <div class="step-number" style="flex-shrink:0">6</div>
         <h2 style="margin:0">The Woodshed</h2>
     </div>
     <p class="subtitle">Practice tools, stems, harmony parts & band notes</p>
@@ -397,7 +413,7 @@
     </div>
     
     <!-- MULTI-TRACK STUDIO (Audio Snippets) -->
-</div><!-- end step5ref -->
+</div><!-- end step6ref -->
         <!-- Step 3: Version Selection (renumbered from Step 2) -->
         <div class="step-card hidden" id="step3">
             <div class="step-number">3</div>
@@ -552,6 +568,5 @@
 
     <script src="data.js"></script>
     <script src="app.js"></script>
-    <script src="rehearsal-mode.js"></script>
 </body>
 </html>
