--- a/index.html
+++ b/index.html
@@ -274,31 +274,10 @@
     </div>
 </div>
 
-<!-- Step 4: Cover Me -->
+<!-- Step 4: Stage Cheat Sheets -->
 <div class="step-card hidden" id="step4ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
         <div class="step-number" style="flex-shrink:0">4</div>
-        <h2 style="margin:0">Cover Me</h2>
-    </div>
-    <p class="subtitle">Other bands playing this song — the original artist live is in North Star &amp; Reference Versions above</p>
-
-    <div class="resource-section" id="coverMeSection">
-        <div class="section-header" style="display:flex;align-items:flex-start;justify-content:space-between;gap:12px;flex-wrap:wrap">
-            <div>
-                <h3>🎤 Cover Versions</h3>
-                <p style="color:var(--text-muted,#94a3b8);font-size:0.85em;margin:0">Other bands playing this song — Archive.org, YouTube, Spotify</p>
-            </div>
-            <button class="btn btn-ghost btn-sm" onclick="searchCoverMe()" style="white-space:nowrap;flex-shrink:0">🔍 Find Covers</button>
-        </div>
-        <div id="coverMeContainer" style="margin-top:12px"></div>
-        <button class="secondary-btn" id="addCoverMeBtn" style="margin-top:12px" onclick="addCoverMe()">+ Add Cover Version</button>
-    </div>
-</div>
-
-<!-- Step 5: Stage Cheat Sheets -->
-<div class="step-card hidden" id="step5ref">
-    <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">5</div>
         <h2 style="margin:0">Stage Crib Notes</h2>
     </div>
     <p class="subtitle">Each member's go-to reference — tabs, chord charts, or lyrics for stage/iPad
@@ -310,10 +289,10 @@
     </div>
 </div>
 
-<!-- Step 6: Practice Workshop -->
-<div class="step-card hidden" id="step6ref">
+<!-- Step 5: Practice Workshop -->
+<div class="step-card hidden" id="step5ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">6</div>
+        <div class="step-number" style="flex-shrink:0">5</div>
         <h2 style="margin:0">The Woodshed</h2>
     </div>
     <p class="subtitle">Practice tools, stems, harmony parts & band notes</p>
@@ -413,7 +392,7 @@
     </div>
     
     <!-- MULTI-TRACK STUDIO (Audio Snippets) -->
-</div><!-- end step6ref -->
+</div><!-- end step5ref -->
         <!-- Step 3: Version Selection (renumbered from Step 2) -->
         <div class="step-card hidden" id="step3">
             <div class="step-number">3</div>
@@ -568,5 +547,6 @@
 
     <script src="data.js"></script>
     <script src="app.js"></script>
+    <script src="help.js"></script>
 </body>
 </html>
