Cover Me addition

--- a/index.html
+++ b/index.html
@@ -274,10 +274,24 @@
     </div>
 </div>
 
-<!-- Step 4: Stage Cheat Sheets -->
-<div class="step-card hidden" id="step4ref">
+<!-- Step 4: Cover Me -->
+<div class="step-card hidden" id="step4coverme">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
         <div class="step-number" style="flex-shrink:0">4</div>
+        <h2 style="margin:0">Cover Me</h2>
+    </div>
+    <p class="subtitle">How other bands play this song — inspiration for your own take</p>
+    <div class="resource-section" id="coverMeSection">
+        <div id="coverMeContainer"></div>
+        <div id="coverMeFormContainer"></div>
+        <button class="secondary-btn" onclick="showCoverMeForm()" style="margin-top:12px">+ Add Cover Version</button>
+    </div>
+</div>
+
+<!-- Step 5: Stage Cheat Sheets -->
+<div class="step-card hidden" id="step4ref">
+    <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
+        <div class="step-number" style="flex-shrink:0">5</div>
         <h2 style="margin:0">Stage Crib Notes</h2>
     </div>
     <p class="subtitle">Each member's go-to reference — tabs, chord charts, or lyrics for stage/iPad
@@ -289,10 +303,10 @@
     </div>
 </div>
 
-<!-- Step 5: Practice Workshop -->
+<!-- Step 6: Practice Workshop -->
 <div class="step-card hidden" id="step5ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">5</div>
+        <div class="step-number" style="flex-shrink:0">6</div>
         <h2 style="margin:0">The Woodshed</h2>
     </div>
     <p class="subtitle">Practice tools, stems, harmony parts & band notes</p>
@@ -547,6 +561,5 @@
 
     <script src="data.js"></script>
     <script src="app.js"></script>
-    <script src="help.js"></script>
 </body>
 </html>
