--- a/index.html
+++ b/index.html
@@ -561,5 +561,6 @@
 
     <script src="data.js"></script>
     <script src="app.js"></script>
+    <script src="help.js"></script>
 </body>
 </html>
