--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deadcetera — Band HQ</title>
+    <title>DeadCetera — Band HQ</title>
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -11,7 +11,7 @@
     <!-- iOS / Safari PWA support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Deadcetera">
+    <meta name="apple-mobile-web-app-title" content="DeadCetera">
     <link rel="apple-touch-icon" href="icon-180.png">
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png">
 
@@ -34,7 +34,7 @@
             <button class="hamburger" onclick="toggleMenu()" aria-label="Menu">
                 <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg>
             </button>
-            <span class="topbar-brand" onclick="showPage('songs')" style="cursor:pointer">Deadcetera</span>
+            <span class="topbar-brand" onclick="showPage('songs')" style="cursor:pointer">DeadCetera</span>
         </div>
         <div class="topbar-right">
             <button id="googleDriveAuthBtn" class="topbar-btn" onclick="handleGoogleDriveAuth()">🔗 Connect</button>
@@ -45,7 +45,7 @@
     <!-- SLIDE-OUT MENU -->
     <div class="menu-overlay" id="menuOverlay" onclick="toggleMenu()"></div>
     <nav class="slide-menu" id="slideMenu">
-        <div class="menu-brand">🎸 Deadcetera</div>
+        <div class="menu-brand">🎸 DeadCetera</div>
         <div class="menu-section">
             <div class="menu-section-title">Music</div>
             <button class="menu-item active" data-page="songs" onclick="showPage('songs')"><span class="menu-icon">🎵</span> Song Library</button>
@@ -86,8 +86,8 @@
     <div class="container">
         <header>
             <!-- Logo placeholder - replace logo.png with your actual logo -->
-            <img src="logo.png" alt="Deadcetera" class="logo" onerror="this.style.display='none'">
-            <h1>🎸 Deadcetera</h1>
+            <img src="logo.png" alt="DeadCetera" class="logo" onerror="this.style.display='none'">
+            <h1>🎸 DeadCetera</h1>
             <p class="subtitle">One app to jam, plan, and manage — so you can focus on the music.</p>
             
             <!-- Sign In -->
@@ -555,7 +555,7 @@
     </div>
 
     <footer style="text-align:center;padding:20px;font-size:0.8em;">
-        <p style="margin-bottom:4px">Deadcetera — Band HQ · Less admin. More jams. 🤘</p>
+        <p style="margin-bottom:4px">DeadCetera — Band HQ · Less admin. More jams. 🤘</p>
         <p style="font-size:0.72em;color:var(--text-dim,#64748b)">© 2025–2026 Drew Merrill. All rights reserved.</p>
     </footer>
 
