--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DeadCetera — Band HQ</title>
+    <title>Deadcetera — Band HQ</title>
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
@@ -11,7 +11,7 @@
     <!-- iOS / Safari PWA support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="DeadCetera">
+    <meta name="apple-mobile-web-app-title" content="Deadcetera">
     <link rel="apple-touch-icon" href="icon-180.png">
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png">
 
@@ -34,7 +34,7 @@
             <button class="hamburger" onclick="toggleMenu()" aria-label="Menu">
                 <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="18" x2="21" y2="18"/></svg>
             </button>
-            <span class="topbar-brand" onclick="showPage('songs')" style="cursor:pointer">DeadCetera</span>
+            <span class="topbar-brand" onclick="showPage('songs')" style="cursor:pointer">Deadcetera</span>
         </div>
         <div class="topbar-right">
             <button id="googleDriveAuthBtn" class="topbar-btn" onclick="handleGoogleDriveAuth()">🔗 Connect</button>
@@ -45,7 +45,7 @@
     <!-- SLIDE-OUT MENU -->
     <div class="menu-overlay" id="menuOverlay" onclick="toggleMenu()"></div>
     <nav class="slide-menu" id="slideMenu">
-        <div class="menu-brand">🎸 DeadCetera</div>
+        <div class="menu-brand">🎸 Deadcetera</div>
         <div class="menu-section">
             <div class="menu-section-title">Music</div>
             <button class="menu-item active" data-page="songs" onclick="showPage('songs')"><span class="menu-icon">🎵</span> Song Library</button>
@@ -86,8 +86,8 @@
     <div class="container">
         <header>
             <!-- Logo placeholder - replace logo.png with your actual logo -->
-            <img src="logo.png" alt="DeadCetera" class="logo" onerror="this.style.display='none'">
-            <h1>🎸 DeadCetera</h1>
+            <img src="logo.png" alt="Deadcetera" class="logo" onerror="this.style.display='none'">
+            <h1>🎸 Deadcetera</h1>
             <p class="subtitle">One app to jam, plan, and manage — so you can focus on the music.</p>
             
             <!-- Sign In -->
@@ -274,24 +274,10 @@
     </div>
 </div>
 
-<!-- Step 4: Cover Me -->
-<div class="step-card hidden" id="step4coverme">
-    <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">4</div>
-        <h2 style="margin:0">Cover Me</h2>
-    </div>
-    <p class="subtitle">How other bands play this song — inspiration for your own take</p>
-    <div class="resource-section" id="coverMeSection">
-        <div id="coverMeContainer"></div>
-        <div id="coverMeFormContainer"></div>
-        <button class="secondary-btn" onclick="showCoverMeForm()" style="margin-top:12px">+ Add Cover Version</button>
-    </div>
-</div>
-
-<!-- Step 5: Stage Cheat Sheets -->
+<!-- Step 4: Stage Cheat Sheets -->
 <div class="step-card hidden" id="step4ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">5</div>
+        <div class="step-number" style="flex-shrink:0">4</div>
         <h2 style="margin:0">Stage Crib Notes</h2>
     </div>
     <p class="subtitle">Each member's go-to reference — tabs, chord charts, or lyrics for stage/iPad
@@ -303,10 +289,10 @@
     </div>
 </div>
 
-<!-- Step 6: Practice Workshop -->
+<!-- Step 5: Practice Workshop -->
 <div class="step-card hidden" id="step5ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">6</div>
+        <div class="step-number" style="flex-shrink:0">5</div>
         <h2 style="margin:0">The Woodshed</h2>
     </div>
     <p class="subtitle">Practice tools, stems, harmony parts & band notes</p>
@@ -555,7 +541,7 @@
     </div>
 
     <footer style="text-align:center;padding:20px;font-size:0.8em;">
-        <p style="margin-bottom:4px">DeadCetera — Band HQ · Less admin. More jams. 🤘</p>
+        <p style="margin-bottom:4px">Deadcetera — Band HQ · Less admin. More jams. 🤘</p>
         <p style="font-size:0.72em;color:var(--text-dim,#64748b)">© 2025–2026 Drew Merrill. All rights reserved.</p>
     </footer>
 
