Add Cover Me section

--- a/index.html
+++ b/index.html
@@ -289,6 +289,19 @@
     </div>
 </div>
 
+<!-- Step 4b: Cover Me -->
+<div class="step-card hidden" id="step4cover">
+    <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
+        <div class="step-number" style="flex-shrink:0">4</div>
+        <h2 style="margin:0">Cover Me 🎤</h2>
+    </div>
+    <p class="subtitle">Other bands' takes — covers, tribute versions, different arrangements worth learning from</p>
+    <div class="resource-section" id="coverMeSection">
+        <div id="coverMeContainer"></div>
+        <button class="secondary-btn" onclick="showAddCoverMeForm()" style="margin-top:12px">+ Add Cover Version</button>
+    </div>
+</div>
+
 <!-- Step 5: Practice Workshop -->
 <div class="step-card hidden" id="step5ref">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
