--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 <!-- Step 4b: Cover Me -->
 <div class="step-card hidden" id="step4cover">
     <div style="display:flex;align-items:center;gap:10px;margin-bottom:4px">
-        <div class="step-number" style="flex-shrink:0">4</div>
+        <div class="step-number" style="flex-shrink:0;font-size:0.8em">4b</div>
         <h2 style="margin:0">Cover Me 🎤</h2>
     </div>
     <p class="subtitle">Other bands' takes — covers, tribute versions, different arrangements worth learning from</p>
