--- a/index.html
+++ b/index.html
@@ -150,10 +150,9 @@
                 </select>
                 <select id="statusFilter" class="app-select" onchange="filterByStatus(this.value)" style="width:auto;min-width:140px;padding:7px 10px;font-size:0.85em;font-weight:600">
                     <option value="all">📊 All Statuses</option>
-                    <option value="this_week">🎯 This Week</option>
+                    <option value="prospect">👀 Prospect</option>
+                    <option value="wip">🔧 Work in Progress</option>
                     <option value="gig_ready">✅ Gig Ready</option>
-                    <option value="needs_polish">⚠️ Needs Polish</option>
-                    <option value="on_deck">📚 On Deck</option>
                 </select>
                 <span title="🎯 This Week = songs you're actively rehearsing this week&#10;✅ Gig Ready = polished and ready to play live&#10;⚠️ Needs Polish = know it but needs work&#10;📚 On Deck = learning, not yet rehearsed" style="cursor:help;color:var(--text-dim,#64748b);font-size:0.9em;margin-left:-4px">ⓘ</span>
                 <label style="display:flex;align-items:center;gap:5px;cursor:pointer;font-size:0.85em;font-weight:600;color:var(--text-muted,#94a3b8);padding:7px 10px;border:1px solid var(--border,rgba(255,255,255,0.08));border-radius:8px;background:rgba(255,255,255,0.04);min-width:140px" title="Show only songs that have documented vocal harmony parts for the band to practice together">
@@ -198,10 +197,9 @@
             <div class="meta-item">
                 <span style="font-weight:600;color:var(--text-muted,#94a3b8);margin-right:6px">🎯 Status:</span>
                 <select id="songStatusSelect" onchange="updateSongStatus(this.value)" class="app-select" style="width:auto;min-width:120px;padding:5px 8px;font-size:0.85em;font-weight:600">
-                    <option value="">Not Started</option>
-                    <option value="on_deck">📚 On Deck</option>
-                    <option value="this_week">🎯 This Week</option>
-                    <option value="needs_polish">⚠️ Needs Polish</option>
+                    <option value="">— Not on Radar —</option>
+                    <option value="prospect">👀 Prospect</option>
+                    <option value="wip">🔧 Work in Progress</option>
                     <option value="gig_ready">✅ Gig Ready</option>
                 </select>
             </div>
@@ -383,6 +381,12 @@
             <p style="color:var(--text-muted,#94a3b8);font-size:0.85em">Who sings what, when</p>
         </div>
         <div id="harmoniesContainer"></div>
+    </div>
+
+    <!-- SONG IN PLAYLISTS -->
+    <div class="resource-section" id="songPlaylistsSection" style="margin-top:8px">
+        <div style="font-size:0.8em;color:var(--text-muted,#94a3b8);font-weight:600;margin-bottom:6px">📋 In Playlists:</div>
+        <div id="songPlaylistsContainer"></div>
     </div>
     
     <!-- REHEARSAL NOTES -->
