--- a/index.html
+++ b/index.html
@@ -94,15 +94,13 @@
             <div id="signInPrompt" style="text-align:center;margin-top:12px;">
                 <div style="position:relative;display:inline-block;">
                     <button id="googleDriveAuthBtn2" onclick="handleGoogleDriveAuth()" 
-                        style="background:var(--accent);color:white;border:none;padding:10px 20px;border-radius:8px;font-size:0.95em;cursor:pointer;font-weight:600;"
-                        onmouseenter="document.getElementById('signInTooltip').style.display='block'"
-                        onmouseleave="document.getElementById('signInTooltip').style.display='none'">
+                        style="background:var(--accent);color:white;border:none;padding:10px 20px;border-radius:8px;font-size:0.95em;cursor:pointer;font-weight:600;">
                         👤 Sign In
                     </button>
                     <button onclick="const t=document.getElementById('signInTooltip');t.style.display=t.style.display==='block'?'none':'block';event.stopPropagation();"
                         style="background:rgba(255,255,255,0.1);border:1px solid rgba(255,255,255,0.2);color:var(--text-muted);padding:8px 10px;border-radius:8px;font-size:0.82em;cursor:pointer;margin-left:6px;"
                         title="Why sign in?">❓</button>
-                    <div id="signInTooltip" style="display:none;position:absolute;top:100%;left:0;margin-top:8px;background:var(--bg-card,#1e293b);border:1px solid rgba(255,255,255,0.15);border-radius:10px;padding:14px;width:300px;max-width:90vw;z-index:100;text-align:left;font-size:0.82em;line-height:1.5;color:var(--text-muted,#94a3b8);box-shadow:0 8px 30px rgba(0,0,0,0.4);">
+                    <div id="signInTooltip" style="display:none;position:absolute;bottom:120%;right:0;margin-bottom:8px;background:var(--bg-card,#1e293b);border:1px solid rgba(255,255,255,0.15);border-radius:10px;padding:14px;width:280px;max-width:80vw;z-index:100;text-align:left;font-size:0.82em;line-height:1.5;color:var(--text-muted,#94a3b8);box-shadow:0 8px 30px rgba(0,0,0,0.4);">
                         <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:6px">
                             <span style="font-weight:700;color:white">Why sign in?</span>
                             <button onclick="document.getElementById('signInTooltip').style.display='none';event.stopPropagation();" style="background:none;border:none;color:var(--text-muted);cursor:pointer;font-size:1.1em;padding:0 0 0 8px">✕</button>
