Chart editor + Gig Mode

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="build-version" content="20260301-131852">
+    <meta name="build-version" content="20260301-140004">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deadcetera — Band HQ</title>
@@ -315,6 +315,15 @@
         <h2 style="margin:0">The Woodshed</h2>
     </div>
     <p class="subtitle">Practice tools, stems, harmony parts & band notes</p>
+    
+    <!-- CHORD CHART (The Band's Chart) -->
+    <div class="resource-section" id="chartSection">
+        <div class="section-header">
+            <h3>🎸 The Chart</h3>
+            <p style="color:var(--text-muted,#94a3b8);font-size:0.85em">One shared chord chart — replaces Ultimate Guitar</p>
+        </div>
+        <div id="chartContainer"></div>
+    </div>
     
     <!-- MOISES STEMS -->
     <div class="resource-section" id="moisesSection">
