--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="build-version" content="20260301-155225">
+    <meta name="build-version" content="20260301-155848">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deadcetera — Band HQ</title>
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="app-shell.css">
+    <link rel="stylesheet" href="rehearsal-mode.css">
 </head>
 <body>
     <!-- TOP BAR -->
